--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
         <h1 class="jumbotron text-center">Date Idea App</h1>
 
         <div class"row">
-            <div class="col-sm-4">
+            <div class="col-4">
                 <button class="btn btn-primary">Add</button>
             </div>
-            <div class="col-sm-4">
+            <div class="col-4">
                 <button class="btn btn-primary">Add</button>
             </div>
-            <div class="col-sm-4">
+            <div class="col-4">
                 <button class="btn btn-primary">Add</button>
             </div>
         </div>
