--- a/index.html
+++ b/index.html
@@ -1,40 +1,33 @@
-<!document <!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Dating App</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="assets/css/style.css" />
-    <script src="assets/javascript/javascript.js"></script>
-     <!-- Compiled and minified CSS -->
-     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/css/materialize.min.css">
-
-     <!-- Compiled and minified JavaScript -->
-     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/js/materialize.min.js"></script>
-             
+    <link rel = "stylesheet" href = "https://fonts.googleapis.com/icon?family=Material+Icons">
+    <link rel = "stylesheet"href = "https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.3/css/materialize.min.css">
+    <link rel="stylesheet" type="text/css" media="screen" href="assets/css/style.css" />          
 </head>
 <body>
-        <div class="container">
-                <nav>
-                        <div class="nav-wrapper">
-                          <a href="#!" class="brand-logo"><i class="material-icons">ideas for</i>date app</a>
-                          <ul class="right hide-on-med-and-down">
-                            <li><a href="sass.html"><i class="material-icons">search</i></a></li>
-                            <li><a href="badges.html"><i class="material-icons">view_module</i></a></li>
-                            <li><a href="collapsible.html"><i class="material-icons">refresh</i></a></li>
-                            <li><a href="mobile.html"><i class="material-icons">more_vert</i></a></li>
-                          </ul>
-                        </div>
-                      </nav>
-                <!-- Page Content goes here -->
-                  
-                 <div class="main-page-buttons">
-                 <a class="waves-effect waves-teal btn-flat" id="btn-add-idea">Add Date Idea</a>
-                 <a href="idea_page.html" class="waves-effect waves-teal btn-flat" id="btn-give-idea">Give Me Idea</a>
-                 <a href="idea_list.html" class="waves-effect waves-teal btn-flat" id="btn-idea-list">Check Date Idea List</a>
-                </div>
-        </div>
+
+  <div class="container">
+    <nav>
+      <div class="nav-wrapper center-align">
+       <h1>Date Idea Generator<h1>
+      </div>
+    </nav>
+	
+    <!-- Page Content goes here -->
+      <a href="idea_page.html" class="waves-effect waves-teal btn-flat" id="btn-give-idea">Give Me Idea</a>
+  </div>
+
    
+
+  <script src="https://www.gstatic.com/firebasejs/4.13.0/firebase.js"></script>
+  <!-- jQuery -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.3/js/materialize.min.js"></script>
+  <script src="assets/javascript/javascript.js"></script>
 </body>
 </html>
