Add main categories

--- a/idea_page.html
+++ b/idea_page.html
@@ -23,18 +23,17 @@
     <!-- The dropdown category button should be here for user selection -->
     <div id="main-page-buttons">
       <ul id= "dropdown1" class ="dropdown-content">
-          <li><option value="category1">category 1</option></li>
-          <li><option value="category2">category 2</option></li>
-          <li><option value="category3">category 3</option></li>
-          <li><option value="category4">category 4</option></li>
-          <li><option value="category5">category 5</option></li>
+          <li><option value="coffee">Coffee</option></li>
+          <li><option value="fun">Fun</option></li>
+          <li><option value="shopping">Shopping</option></li>
+          <li><option value="nightlife">Nightlife</option></li>
+          <li><option value="food">Food</option></li>
       </ul>
         
-      <a class = "btn waves-effect waves-teal btn-flat dropdown-button" id="btn-category-dropdown" href="#" data-activates = "dropdown1">Dropdown
+      <a class = "btn waves-effect waves-teal btn-flat dropdown-button" id="btn-category-dropdown" href="#" data-activates = "dropdown1">Pick a Category
         <i class = "mdi-navigation-arrow-drop-down right"></i></a>
 
         <button class="btn waves-effect waves-light" type="submit" id="submit-btn" name="action">Submit
-            <i class="material-icons right">send</i>
         </button>
                   
     </div>
