Fix select dropdown css, add javascript to get category value

--- a/idea_page.html
+++ b/idea_page.html
@@ -22,16 +22,15 @@
 
     <!-- The dropdown category button should be here for user selection -->
     <div id="main-page-buttons">
-      <ul id= "dropdown1" class ="dropdown-content">
-          <li><option value="coffee">Coffee</option></li>
-          <li><option value="fun">Fun</option></li>
-          <li><option value="shopping">Shopping</option></li>
-          <li><option value="nightlife">Nightlife</option></li>
-          <li><option value="food">Food</option></li>
-      </ul>
-        
-      <a class = "btn waves-effect waves-teal btn-flat dropdown-button" id="btn-category-dropdown" href="#" data-activates = "dropdown1">Pick a Category
-        <i class = "mdi-navigation-arrow-drop-down right"></i></a>
+      <div class="custom-select" id="dropdown" style="width:200px;">
+          <select>
+              <option value="coffee">Coffee</option>
+              <option value="fun">Fun</option>
+              <option value="shopping">Shopping</option>
+              <option value="nightlife">Nightlife</option>
+              <option value="food">Food</option>
+          </select>
+        </div>
 
         <button class="btn waves-effect waves-light" type="submit" id="submit-btn" name="action">Submit
         </button>
