--- a/idea_page.html
+++ b/idea_page.html
@@ -25,10 +25,11 @@
       <div class="custom-select" id="dropdown" style="width:200px;">
           <select>
               <option value="coffee">Coffee</option>
-              <option value="fun">Fun</option>
-              <option value="shopping">Shopping</option>
-              <option value="nightlife">Nightlife</option>
+              <option value="fun">Outdoors</option>
+              <option value="shops">Shopping</option>
+              <option value="drinks">Drinks</option>
               <option value="food">Food</option>
+              <option value="trending">Trending</option>
           </select>
         </div>
 
@@ -40,7 +41,9 @@
 
 
 
-    <div id="foursquare"></div>
+    <div id="foursquare">
+      <!-- Get the photo of the venue or date idea here -->
+    </div>
 
     <div id="googlemap"></div>
 
