Get an image to be added to div and fix ajax call

--- a/idea_page.html
+++ b/idea_page.html
@@ -25,7 +25,7 @@
       <div class="custom-select" id="dropdown" style="width:200px;">
           <select>
               <option value="coffee">Coffee</option>
-              <option value="fun">Outdoors</option>
+              <option value="outdoors">Outdoors</option>
               <option value="shops">Shopping</option>
               <option value="drinks">Drinks</option>
               <option value="food">Food</option>
