Resove merge conflicts final

--- a/idea_page.html
+++ b/idea_page.html
@@ -26,59 +26,38 @@
     <!-- The dropdown category button should be here for user selection -->
     <div id="main-page-buttons">
       <div class="custom-select" id="dropdown" style="width:200px;">
-<<<<<<< HEAD
         <select>
           <option value="coffee">Coffee</option>
-          <option value="fun">Fun</option>
-          <option value="shopping">Shopping</option>
-          <option value="nightlife">Nightlife</option>
+          <option value="outdoors">Outdoors</option>
+          <option value="shops">Shopping</option>
+          <option value="drinks">Drinks</option>
           <option value="food">Food</option>
+          <option value="trending">Trending</option>
         </select>
       </div>
 
       <button class="btn waves-effect waves-light" type="submit" id="submit-btn" name="action">Submit
       </button>
 
-=======
-          <select>
-              <option value="coffee">Coffee</option>
-              <option value="outdoors">Outdoors</option>
-              <option value="shops">Shopping</option>
-              <option value="drinks">Drinks</option>
-              <option value="food">Food</option>
-              <option value="trending">Trending</option>
-          </select>
-        </div>
-
-        <button class="btn waves-effect waves-light" type="submit" id="submit-btn" name="action">Submit
-        </button>
-                  
->>>>>>> alexbranch-master
     </div>
 
 
 
 
-<<<<<<< HEAD
   </div>
-=======
-    <div id="foursquare">
-      <!-- Get the photo of the venue or date idea here -->
-    </div>
->>>>>>> alexbranch-master
-
   <div id="foursquare"></div>
+
+
 
   <div id="googlemapdiv">
     <p align="center">
-      <iframe id="googlemap" width="600" height="450" frameborder="0" style="border:0"  
-      allowfullscreen>
+      <iframe id="googlemap" width="600" height="450" frameborder="0" style="border:0" allowfullscreen>
       </iframe>
     </p>
   </div>
 
   <div id="tablediv">
-    
+
   </div>
 
 
