finish up table and pictures before merge

--- a/idea_page.html
+++ b/idea_page.html
@@ -56,8 +56,10 @@
     </p>
   </div>
 
-  <div id="tablediv">
-
+  <div>
+    <table id="tablediv">
+      <!-- details of venue go in here -->
+    </table>
   </div>
 
 
@@ -70,6 +72,6 @@
   <script src="assets/javascript/javascript.js"></script>
 </body>
 
-<!-- src="https://www.google.com/maps/embed/v1/place?key=AIzaSyDKcsgN-w_udSFRh-gzsY0CzArq7fMo-68&q=McDonalds,Chicago+IL" -->
+
 
 </html>
