Fix table styling. Fix google map sizing

--- a/idea_page.html
+++ b/idea_page.html
@@ -25,7 +25,7 @@
 
     <!-- The dropdown category button should be here for user selection -->
     <div id="main-page-buttons" class="center-align">
-      <div class="custom-select" id="dropdown"  style="width:200px;">
+      <div class="custom-select" id="dropdown" style="width:200px;">
         <select>
           <option value="coffee">Coffee</option>
           <option value="outdoors">Outdoors</option>
@@ -40,36 +40,34 @@
       </button>
 
     </div>
-<div class="row" >
+    <div class="row">
 
-<div id="foursquare" class="col s3" ></div>
-
-
-  <div id="googlemapdiv" class="image-gm col s6">
-    <p align="center">
-      <iframe id="googlemap" class="responsive-image">
-      </iframe>
-    </p>
-  </div>
-
-  <div>
-    <table id="tablediv">
-      <!-- details of venue go in here -->
-    </table>
-  </div>
+      <div id="foursquare" class="col s6"></div>
 
 
-  </div>
-  
+      <div id="googlemapdiv" class="image-gm col s6">
+        <iframe id="googlemap" class="responsive-image">
+        </iframe>
+      </div>
+
+    </div>
+
+    <div class="tableinfo">
+      <table class="centered" id="tablediv">
+        <!-- details of venue go in here -->
+      </table>
+    </div>
+
+</div>
 
 
 
-  <script src="https://www.gstatic.com/firebasejs/4.13.0/firebase.js"></script>
-  </script>
-  <!-- jQuery -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.3/js/materialize.min.js"></script>
-  <script src="assets/javascript/javascript.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/4.13.0/firebase.js"></script>
+    </script>
+    <!-- jQuery -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.3/js/materialize.min.js"></script>
+    <script src="assets/javascript/javascript.js"></script>
 </body>
 
 
