--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 
-  <div class="container">
+  <div class="container"  >
     <nav>
       <div class="nav-wrapper center-align">
        <h1>Date Idea Generator<h1>
@@ -19,7 +19,9 @@
     </nav>
 	
     <!-- Page Content goes here -->
-      <a href="idea_page.html" class="waves-effect waves-teal btn-flat" id="btn-give-idea">Give Me Idea</a>
+    <div class="center-align">
+      <a href="idea_page.html" class="waves-effect waves-teal btn-flat " id="btn-give-idea">Give Me Idea</a>
+    </div>
   </div>
 
    
