Fix error with geolocation

--- a/index.html
+++ b/index.html
@@ -11,13 +11,14 @@
 </head>
 <body>
 
-  <div class="container">
+  <div class="container main-container">
     <nav>
       <div class="nav-wrapper center-align">
-       <h1>Date Idea Generator<h1>
+        <h1>DIG App </h1>
       </div>
     </nav>
-	
+    
+    <h5>Do you find yourself spending hours and hours thinking of date ideas with your mate? DIG gives you a rnad</h5>
     <!-- Page Content goes here -->
       <a href="idea_page.html" class="waves-effect waves-teal btn-flat" id="btn-give-idea">Give Me Idea</a>
   </div>
