--- a/idea_page.html
+++ b/idea_page.html
@@ -15,9 +15,9 @@
   <div class="container">
 
     <nav>
-      <div class="nav-wrapper center-align">
+      <div class="nav-wrapper center-align" style="width: 100%">
         <h1>
-          <a href="index.html">Date Idea Generator</a>
+          <a href="index.html">DIG</a>
           <h1>
       </div>
     </nav>
@@ -42,7 +42,7 @@
     </div>
 <div class="row" >
 
-<div id="foursquare" class="col s3" ></div>
+<div id="foursquare" class="col s6" ></div>
 
 
   <div id="googlemapdiv" class="image-gm col s6">
