commit before merge with deyan

--- a/idea_page.html
+++ b/idea_page.html
@@ -40,7 +40,7 @@
       </button>
 
     </div>
-    <div class="row">
+    <div class="row" id='foo'>
 
       <div id="foursquare" class="col s6"></div>
 
