added footer and fixed table spacing

--- a/idea_page.html
+++ b/idea_page.html
@@ -68,7 +68,9 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.3/js/materialize.min.js"></script>
   <script src="assets/javascript/javascript.js"></script>
 </body>
-
-
-
+<br>
+<br>
+<footer class="page-footer">
+    <!-- <div class="footer-copyright"> -->
+  </footer>
 </html>
