--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
        </div>
     </nav>
     
-    <h5>Use DIG to generate random date venues</h5>
+    <h5 class="center-align">Use DIG to generate random date venues</h5>
 
 
     <!-- Page Content goes here -->
@@ -35,4 +35,9 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.3/js/materialize.min.js"></script>
 
 </body>
+
+<footer class="page-footer">
+    <!-- <div class="footer-copyright"> -->
+  </footer>
+      
 </html>
